[package]
name = "peter_wire_bot"
version = "0.1.0"
authors = ["Jack the dev", "Peter pan"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
near-sdk-sim = "3.1.0"

[dependencies]
near-sdk = "3.1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true